added some kind of rendering, need to fix user inp

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hello World - Rust</title>
   <script type="module" src="./index.js"></script>
   <script type="module" src="./interface.js"></script>
+  <script src="webgl.js" type="module"></script>
 </head>
 
 <body>
@@ -14,6 +15,7 @@
   <input id="input-box" oninput="inpUpdate(this.value);" />
 
   <p id="out0">Lexemes:</p>
+  <canvas id="glcanvas" width="480" height="480"></canvas>
 </body>
 
 </html>
