added infinitely resizable grid, need to add numbers to provide context

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <input id="input-box" oninput="inpUpdate(this.value);" />
 
   <p id="out0">Lexemes:</p>
-  <canvas id="glcanvas" width="480" height="480"></canvas>
+  <canvas style="border: 1px solid black;" id="glcanvas" width="600" height="600"></canvas>
+  <button id="resetView" type="button">Reset View</button>
+  <input id="x1"/><input id="x2"/><input id="y1"/><input id="y2"/>
 </body>
 
 </html>
