render of function added to WASM, more optimizations and functionality underway

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <p id="out0">Lexemes:</p>
         <button id="resetView" type="button">Reset View</button>
+        <p id="frameTime"></p>
       </div>
     </div>
     <div class="scale"></div>
