--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
         <p id="out0">Lexemes:</p>
         <button id="resetView" type="button">Reset View</button>
         <p id="frameTime"></p>
+        <label for="haxis">Horizontal Axis:</label>
+        <select name="haxis" id="haxis">
+          <option value="i_r">Real Input</option>
+          <option value="o_r">Real Output</option>
+          <option value="i_i">Imaginary Input</option>
+          <option value="o_i">Imaginary Output</option>
+        </select>
+        <br>
+        <label for="vaxis">Vertical Axis:</label>
+        <select name="vaxis" id="vaxis">
+          <option value="o_r">Real Output</option>
+
+          <option value="o_i">Imaginary Output</option>
+        </select>
+        <br>
+        <label for="cont"> Continuous Approximation</label>
+        <input type="checkbox" id="cont" name="Continuous Approximation" checked="true">
+        
       </div>
     </div>
     <div class="scale"></div>
