basic functionality completed, going to refactor for better usability/functionality

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <br>
         <label for="vaxis">Vertical Axis:</label>
         <select name="vaxis" id="vaxis">
+          
           <option value="o_r">Real Output</option>
-
+          <option value="i_r">Real Input</option>
           <option value="o_i">Imaginary Output</option>
+          <option value="i_i">Imaginary Input</option>
         </select>
         <br>
         <label for="cont"> Continuous Approximation</label>
