Added support for mutable variables, which included redoing function input and their boxes; Moved and cleaned up related classes

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div id="menu">
         <div id="hiddenHider"></div>
         <div id="hider"></div>
-        <h1>Complex Web Graph</h1>
+        <div style="height: 4vh; display: grid; align-items: center; margin-bottom: .7vh;">
+            <img style="height: 4vh; grid-column: 1; margin-right: 4px;" src="./media/Icon256.png">
+            <h1 style="font-size: 1.6em; grid-column: 2;">Complex Web Graph</h1>
+        </div>
         <p>Function to graph:</p>
-        <div id="inputs" style="width: 85%;">
-            <input id="main" class="funcInput" oninput="inpUpdate(this.value);" autocomplete="off" />
+        <div id="inputs" style="width: 100%;">
         </div>
         <p>Axes:</p>
         <div class="axisSelector">
