optimizing site load times and size

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="icon" type="image/x-icon" href="./media/Icon256.png">
     <script type="module" src="./pkg/index.js">
     </script>
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/gh/dreampulse/computer-modern-web-font@master/fonts.css">
     <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -78,7 +76,7 @@
         <button id="resetView">Reset View</button>
         <div id="menuFooter">
             <a href="https://github.com/varphi-online/wgraphc"><img
-                    src="https://cdn.iconscout.com/icon/free/png-256/free-code-280-460136.png?f=webp&w=256"
+                    src="./media/code_icon.webp"
                     style="height: 100%;"></a>
         </div>
     </div>
