--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="./pkg/index.js">
     </script>
     <link rel="stylesheet" href="index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body style="overflow: hidden; margin: 0;">
