--- a/index.html
+++ b/index.html
@@ -23,63 +23,69 @@
         <p>Function to graph:</p>
         <div id="inputs" style="width: 100%;">
         </div>
-        <p>Axes:</p>
-        <div class="axisSelector">
-            <div style="grid-column: 1;"><label for="haxis">Horizontal Axis:</label></div>
-            <div style="grid-column: 2; justify-self: right;">
+        <button class="resetView" id="add">+</button>
+        <details style="width: 100%; margin-top: 1vh; margin-bottom: 1vh;">
+            <summary style="position: fixed; left:50%; transform: translateX(-50%);">Settings</summary>
+            <div id="settings">
+                <p style="position: relative; top: 2vh;">Axes:</p>
+                <div class="axisSelector">
+                    <div style="grid-column: 1;"><label for="haxis">Horizontal Axis:</label></div>
+                    <div style="grid-column: 2; justify-self: right;">
 
-                <select class="selector" name="haxis" id="haxis">
-                    <option value="i_r">Real Input</option>
-                    <option value="o_r">Real Output</option>
-                    <option value="i_i">Imaginary Input</option>
-                    <option value="o_i">Imaginary Output</option>
-                </select>
-            </div>
-            <div style="grid-column: 1;">
-                <label for="vaxis">Vertical Axis:</label>
-            </div>
-            <div style="grid-column: 2; justify-self: right;">
-                <select class="selector" name="vaxis" id="vaxis">
+                        <select class="selector" name="haxis" id="haxis">
+                            <option value="i_r">Real Input</option>
+                            <option value="o_r">Real Output</option>
+                            <option value="i_i">Imaginary Input</option>
+                            <option value="o_i">Imaginary Output</option>
+                        </select>
+                    </div>
+                    <div style="grid-column: 1;">
+                        <label for="vaxis">Vertical Axis:</label>
+                    </div>
+                    <div style="grid-column: 2; justify-self: right;">
+                        <select class="selector" name="vaxis" id="vaxis">
 
-                    <option value="o_r">Real Output</option>
-                    <option value="i_r">Real Input</option>
-                    <option value="o_i">Imaginary Output</option>
-                    <option value="i_i">Imaginary Input</option>
-                </select>
-            </div>
-        </div>
+                            <option value="o_r">Real Output</option>
+                            <option value="i_r">Real Input</option>
+                            <option value="o_i">Imaginary Output</option>
+                            <option value="i_i">Imaginary Input</option>
+                        </select>
+                    </div>
+                </div>
 
-        <div class="axisSelector" id="axisInputContainer" style="width: 95%;">
-            <div style="grid-column: 1; justify-self: right;">
-                <p class="axisLabel">X<sub>min</sub>:</p><input class="axisInput" id="x1" autocomplete="off" />
+                <div class="axisSelector" id="axisInputContainer" style="width: 95%;">
+                    <div style="grid-column: 1; justify-self: right;">
+                        <p class="axisLabel">X<sub>min</sub>:</p><input class="axisInput" id="x1" autocomplete="off" />
+                    </div>
+                    <div style="grid-column: 2; justify-self: right;""><p class=" axisLabel">X<sub>max</sub>:</p><input
+                            class="axisInput" id="x2" autocomplete="off" /></div>
+                    <div style="grid-column: 1; justify-self: right;">
+                        <p class="axisLabel">Y<sub>min</sub>:</p><input class="axisInput" id="y1" autocomplete="off" />
+                    </div>
+                    <div style="grid-column: 2; justify-self: right;""><p class=" axisLabel">Y<sub>max</sub>:</p><input
+                            class="axisInput" id="y2" autocomplete="off" /></div>
+                </div>
+                <div class="axisSelector" style="margin-top: 2vh;">
+                    <label for="cont" style="grid-column: 1; justify-self: center;"> Continuous Approximation</label>
+                    <input type="checkbox" id="cont" name="Continuous Approximation" checked="true"
+                        style="grid-column: 2; justify-self: left;">
+                </div>
+                <p style="margin-top: 2vh; margin-bottom: 0;">Resolution (Performance Hit) :</p>
+                <div id="" class="number-input">
+                    <button id="rezDown"
+                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()"></button>
+                    <input class="numInp" type="number" step="1" id="resolution" min="1" max="200" value="3"
+                        style="grid-column: 2; justify-self: left;">
+                    <button id="rezUp" onclick="this.parentNode.querySelector('input[type=number]').stepUp();"
+                        class="plus"></button>
+                </div>
+                <button id="resetView" class="resetView">Reset View</button>
+                <div id="menuFooter">
+                    <a href="https://github.com/varphi-online/wgraphc"><img src="./media/code_icon.webp"
+                            style="height: 100%;"></a>
+                </div>
             </div>
-            <div style="grid-column: 2; justify-self: right;""><p class=" axisLabel">X<sub>max</sub>:</p><input
-                    class="axisInput" id="x2" autocomplete="off" /></div>
-            <div style="grid-column: 1; justify-self: right;">
-                <p class="axisLabel">Y<sub>min</sub>:</p><input class="axisInput" id="y1" autocomplete="off" />
-            </div>
-            <div style="grid-column: 2; justify-self: right;""><p class=" axisLabel">Y<sub>max</sub>:</p><input
-                    class="axisInput" id="y2" autocomplete="off" /></div>
-        </div>
-        <div class="axisSelector" style="margin-top: 2vh;">
-            <label for="cont" style="grid-column: 1; justify-self: center;"> Continuous Approximation</label>
-            <input type="checkbox" id="cont" name="Continuous Approximation" checked="true"
-                style="grid-column: 2; justify-self: left;">
-        </div>
-        <p style="margin-top: 2vh; margin-bottom: 0;">Resolution (Performance Hit) :</p>
-        <div id="" class="number-input">
-            <button id="rezDown" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"></button>
-            <input class="numInp" type="number" step="1" id="resolution" min="1" max="200" value="3"
-                style="grid-column: 2; justify-self: left;">
-            <button id="rezUp" onclick="this.parentNode.querySelector('input[type=number]').stepUp();"
-                class="plus"></button>
-        </div>
-        <button id="resetView">Reset View</button>
-        <div id="menuFooter">
-            <a href="https://github.com/varphi-online/wgraphc"><img
-                    src="./media/code_icon.webp"
-                    style="height: 100%;"></a>
-        </div>
+        </details>
     </div>
     <div id="sliders">
         <div id="hiddenHider2"></div>
